[package]
name = "hypothesis"
version = "0.7.1"
authors = ["Ninjani"]
edition = "2018"
description = "a Rust wrapper and CLI for the Hypothesis API"
repository = "https://github.com/out-of-cheese-error/rust-hypothesis"
readme = "README.md"
license = "MIT"
keywords = ["hypothesis", "annotation", "api", "cli"]
categories = ["api-bindings", "command-line-utilities"]

[features]
default = ["cli"]

# Feature required for hypothesis the CLI application.
# Disable (set default-features=false) if using as a Rust crate.
cli = [
    "structopt",
    "eyre",
    "color-eyre"
]

[dependencies]
# For CLI
eyre = { version = "0.6.2", optional = true }
color-eyre = { version = "0.5.7", optional = true }
structopt = { version = "0.3.20", optional = true }

# API calls
reqwest = { version = "0.10.8", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "0.2.22", features = ["macros"] }
futures = "0.3.7"
thiserror = "1.0.22"
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
derive_builder = "0.9.0"
url = "2.2.0"

[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1.0.5"
dotenv = "0.15.0"
