[package]
name = "hypothesis"
version = "0.10.4"
authors = ["Ninjani"]
edition = "2021"
description = "a Rust wrapper and CLI for the Hypothesis API"
repository = "https://github.com/out-of-cheese-error/rust-hypothesis"
readme = "README.md"
license = "MIT"
keywords = ["hypothesis", "annotation", "api", "cli"]
categories = ["api-bindings", "command-line-utilities"]

[features]
default = ["cli"]

# Feature required for hypothesis the CLI application.
# Disable (set default-features=false) if using as a Rust crate.
cli = [
    "structopt",
    "eyre",
    "color-eyre"
]

[dependencies]
# For CLI
eyre = { version = "0.6.8", optional = true }
color-eyre = { version = "0.6.2", optional = true }
structopt = { version = "0.3.26", optional = true }

# API calls
reqwest = { version = "0.11.11", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
futures = "0.3.23"
thiserror = "1.0.32"
chrono = { version = "0.4.22", features = ["serde"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
derive_builder = "0.11.2"
url = "2.2.2"

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"
dotenv = "0.15.0"
