[package]
name = "hypothesis"
version = "0.11.3"
authors = ["Ninjani"]
edition = "2021"
description = "a Rust wrapper and CLI for the Hypothesis API"
repository = "https://github.com/out-of-cheese-error/rust-hypothesis"
readme = "README.md"
license = "MIT"
keywords = ["hypothesis", "annotation", "api", "cli"]
categories = ["api-bindings", "command-line-utilities"]

[features]
default = ["cli"]

# Feature required for hypothesis the CLI application.
# Disable (set default-features=false) if using as a Rust crate.
cli = [
    "clap",
    "clap_complete",
    "eyre",
    "color-eyre"
]

[dependencies]
# For CLI
eyre = { version = "0.6.11", optional = true }
color-eyre = { version = "0.6.2", optional = true }
clap = { version = "4.4.12", features = ["derive", "env"], optional = true }
clap_complete = { version = "4.4.5", optional = true }

# API calls
reqwest = { version = "0.11.23", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
futures = "0.3.30"
thiserror = "1.0.53"
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
derive_builder = "0.12.0"
url = "2.5.0"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
dotenv = "0.15.0"
